--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,12 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/images/
+  - assets/images/
+
+  fonts:
+  - family: FiraCode
+    fonts:
+    - asset: assets/fonts/fc.otf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
