--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   image_picker: ^0.5.0+3
   path_provider: ^0.5.0+1
+  flutter_svg: ^0.11.0+1
 
 dev_dependencies:
   flutter_test:
@@ -40,6 +41,7 @@ flutter:
 
   assets:
   - assets/images/
+  - assets/vector/
 
   fonts:
   - family: FiraCode
