--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   image_picker: ^0.5.0+3
   path_provider: ^0.5.0+1
   flutter_svg: ^0.11.0+1
+  url_launcher: ^5.0.1
+  package_info: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
