Add icon for iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,10 +22,16 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Request permissoin to save image to library</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Needs to read your photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>UIStatusBarHidden</key>
+	<false/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -41,9 +47,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Request permissoin to save image to library</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Needs to read your photo library</string>
 </dict>
 </plist>
