--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,9 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutine_version"
+
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.palette:palette:1.0.0'
     testImplementation 'junit:junit:4.12'
