--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,7 @@
 buildscript {
-    ext.kotlin_version = '1.3.0'
+    ext.kotlin_version = '1.3.21'
+    ext.kotlin_coroutine_version = '1.0.1'
+
     repositories {
         google()
         jcenter()
