--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   image_picker: ^0.5.0+3
-  path_provider: ^0.5.0+1
-  flutter_svg: ^0.11.0+1
+  path_provider: ^1.6.11
+  flutter_svg: ^0.17.4
   url_launcher: ^5.0.1
   package_info: ^0.4.0+1
 
